--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     ports:
       - 3306:3306
     environment:
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_USER=root
+      - MYSQL_ROOT_PASSWORD=just-a-secret
+      - MYSQL_USER=db_user
       - MYSQL_PASSWORD=secret
       - MYSQL_DATABASE=project
